# ai-ci-failure-analyzer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
reports/: report.json  report.md
src/ai_ci_failure_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/ci_failure_analyzer/: classifier.py  cli.py  flaky.py  json_report.py  parser.py  report.py  severity.py  trends.py
tests/: test_classifier.py  test_flaky.py  test_json_report.py  test_parser.py  test_report.py  test_severity.py
